Changes to support the Windows OS platform (#868)
* Changes to support the Windows OS platform

* Addressed review comments

* Addressed review comments

* review comments 2

* review comments 3