@@ -15,12 +15,12 @@
  */
 package com.google.fhir.analytics;
 
-import static org.apache.beam.sdk.io.FileSystems.DEFAULT_SCHEME;
+import static com.google.fhir.analytics.DwhFiles.DEFAULT_SCHEME;
 
 import com.google.common.base.Preconditions;
 import com.google.common.base.Strings;
+import java.io.File;
 import java.io.IOException;
-import java.net.URI;
 import java.nio.file.DirectoryNotEmptyException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -65,6 +65,7 @@ public class DwhFilesManager {
   private boolean isPurgeJobRunning;
 
   private String dwhRootPrefix;
+
   private int numOfDwhSnapshotsToRetain;
 
   private static final Logger logger = LoggerFactory.getLogger(DwhFilesManager.class.getName());
@@ -168,10 +169,12 @@ public class DwhFilesManager {
    * @throws IOException
    */
   private void deleteDirectoryAndFiles(ResourceId rootDirectory) throws IOException {
-    ResourceId filesResourceToBeMatched =
-        rootDirectory.resolve("**", StandardResolveOptions.RESOLVE_FILE);
+    String fileSeparator = DwhFiles.getFileSeparatorForDwhFiles(rootDirectory.toString());
     List<MatchResult> matchedFilesResultList =
-        FileSystems.matchResources(Collections.singletonList(filesResourceToBeMatched));
+        FileSystems.match(
+            List.of(
+                DwhFiles.getPathEndingWithFileSeparator(rootDirectory.toString(), fileSeparator)
+                    + "**"));
 
     // Collect the matched files which also includes the files under the subdirectories, at the same
     // time collect the directories as well.
@@ -276,7 +279,7 @@ public class DwhFilesManager {
 
   /**
    * This method returns the base directory where the DWH snapshots needs to be created. This is
-   * determined by ignoring the prefix part in the given input format <baseDir></prefix> for the
+   * determined by ignoring the prefix part in the given input format <baseDir>/<prefix> for the
    * dwhRootPrefix
    *
    * @param dwhRootPrefix
@@ -297,7 +300,7 @@ public class DwhFilesManager {
   /**
    * This method returns the prefix name that needs to be applied to the DWH snapshot root folder
    * name. This is determined by considering the prefix part in the given input format
-   * <baseDir></prefix> for the dwhRootPrefix
+   * <baseDir>/<prefix> for the dwhRootPrefix
    *
    * @param dwhRootPrefix
    * @return the prefix name
@@ -341,12 +344,18 @@ public class DwhFilesManager {
    * @throws IOException
    */
   Set<ResourceId> getAllChildDirectories(String baseDir) throws IOException {
-    // TODO avoid using `/` in resolve.
-    ResourceId resourceId =
-        FileSystems.matchNewResource(baseDir, true)
-            .resolve("*/*", StandardResolveOptions.RESOLVE_FILE);
+    String fileSeparator = DwhFiles.getFileSeparatorForDwhFiles(baseDir);
+    // Avoid using ResourceId.resolve(..) method to resolve the files when the path contains glob
+    // expressions with multiple special characters like **, */* etc as this api only supports
+    // single special characters like `*` or `..`. Rather use the FileSystems.match(..) if the path
+    // contains glob expressions.
     List<MatchResult> matchResultList =
-        FileSystems.matchResources(Collections.singletonList(resourceId));
+        FileSystems.match(
+            List.of(
+                DwhFiles.getPathEndingWithFileSeparator(baseDir, fileSeparator)
+                    + "*"
+                    + fileSeparator
+                    + "*"));
     Set<ResourceId> childDirectories = new HashSet<>();
     for (MatchResult matchResult : matchResultList) {
       if (matchResult.status() == Status.OK && !matchResult.metadata().isEmpty()) {
@@ -364,11 +373,11 @@ public class DwhFilesManager {
   }
 
   private int getLastIndexOfSlash(String dwhRootPrefix) {
-    String scheme = parseScheme(dwhRootPrefix);
+    String scheme = DwhFiles.parseScheme(dwhRootPrefix);
     int index = -1;
     switch (scheme) {
       case DEFAULT_SCHEME:
-        index = dwhRootPrefix.lastIndexOf("/");
+        index = dwhRootPrefix.lastIndexOf(File.separator);
         break;
       case GcsPath.SCHEME:
         // Fetch the last index position of the character '/' after the bucket name in the gcs path.
@@ -390,10 +399,5 @@ public class DwhFilesManager {
         throw new IllegalArgumentException(errorMessage);
     }
     return index;
-  }
-
-  private static String parseScheme(String spec) {
-    URI uri = URI.create(spec);
-    return Strings.isNullOrEmpty(uri.getScheme()) ? DEFAULT_SCHEME : uri.getScheme();
   }
 }
